--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=WebManga
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
+spring.data.mongodb.uri=mongodb+srv://Tien:eGI5VWpOXWuz2ZHO@cluster0.h3udb.mongodb.net/Cluster0?retryWrites=true&w=majority
+
+spring.data.mongodb.auto-index-creation=true
+spring.data.mongodb.database=WebComic
